--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <title>React App</title>
   </head>
   <body>
